syntax = "proto3";
package model;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

import "context.proto";

message Transaction {
    message SpanCount {
        uint32 started = 1;
        uint32 dropped = 2;
    }

    google.protobuf.Timestamp timestamp = 1;
    string id = 2 [(validate.rules).string.min_len = 1];
    string trace_id = 3 [(validate.rules).string.min_len = 1];
    string parent_id = 4;
    SpanCount span_count = 5;
    Context2 context = 6;
    google.protobuf.Duration duration = 7 [(validate.rules).duration.required = true];
    string name = 8;
    string result = 9;
    string type = 10 [(validate.rules).string.min_len = 1];
    map<string, double> marks = 11;
    bool sampled = 12;
}
